// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render the Avatar with offline badge 1`] = `
<div
  className="avatar"
>
  <img
    alt="test@test.de"
    className="h-auto"
    height="44"
    src="//www.gravatar.com/avatar/f84d37ce99493155ee296c2b746191d0/?d=mp&r=g&s=88"
    width="44"
  />
  <div
    className="badge badge--offline"
    data-test-id="badge"
  />
</div>
`;

exports[`<Avatar /> should render the Avatar with online badge 1`] = `
<div
  className="avatar"
>
  <img
    alt="John Doe"
    className="h-auto"
    height="44"
    src="//www.gravatar.com/avatar/f84d37ce99493155ee296c2b746191d0/?d=mp&r=g&s=88"
    width="44"
  />
  <div
    className="badge badge--online"
    data-test-id="badge"
  />
</div>
`;
